#    Licensed under the Apache License, Version 2.0 (the "License"); you may
#    not use this file except in compliance with the License. You may obtain
#    a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.

[metadata]
name=bork_api
summary = Validator API/WebUI
description-file = README.md
license = Apache License, Version 2.0
author = pmverdugo
author_email = pmverdugo@dit.upm.es
homepage = http://github.org/ging/bork
version = 0.0.1

[files]
packages =
    validator_api
    validator_webui
data_files =
    /etc/bork = etc/bork/*

[global]
setup-hooks = pbr.hooks.setup_hook

[entry_points]
console_scripts =
   validator_api = bork.command.validator_api:main
   generate_image = bork.command.generate_image:main
oslo.config.opts =
    bork = bork.opts:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity=2
detailed-errors=1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = bork/locale
domain = bork

[update_catalog]
domain = bork
output_dir = bork/locale
input_file = bork/locale/validator.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = bork/locale/validator.pot